--- a/openfisca_pf/parameters/daf/redevance_domaniale/type_calcul.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/type_calcul.yaml
@@ -26,3 +26,6 @@ vente_de_produits_locaux_zone_aeroportuaire:
   description: Méthode de calcul utilisée pour les ventes de produits locaux  (zone aéroportuaire)
   values:
     2018-01-01: 2
+vente_etale:
+  values:
+    2018-01-01: 2
