Recoding of threshold computation

--- a/openfisca_pf/parameters/daf/redevance_domaniale/type_calcul.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/type_calcul.yaml
@@ -31,3 +31,6 @@ terrain_sport_ac_elec:
 terrain_sport_sans_elec:
   values:
     2018-01-01: 3
+test_fonction_palier:
+  values:
+    2018-01-01: 4
