--- a/openfisca_pf/parameters/daf/redevance_domaniale/type_calcul.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/type_calcul.yaml
@@ -34,3 +34,6 @@ terrain_sport_sans_elec:
 test_fonction_palier:
   values:
     2018-01-01: 4
+test_fonction_palier_zone:
+  values:
+    2018-01-01: 5
