--- a/openfisca_pf/parameters/daf/redevance_domaniale/type_4/test_fonction_palier.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/type_4/test_fonction_palier.yaml
@@ -1,3 +1,11 @@
+## Type_4 computation computes the total amount depending on duration threshold and dayly rate that evolve.
+## For redevance domaniale, 4 scales have been configured but for the moment only 3 are used.
+## | duree < threshold_1 | duree < threshold_2                             | duree > threshold_2
+## | montant = init      | montant = init + rate_1 * (duree - threshold_1) |  montant = init + rate_1 * (threshold2 - threshold_1) + rate_2 * (duree - threshold_2)
+
+## If only two scales is needed, put the value for rate_3 than for rate_2
+
+
 description: Paramètres pour le calcul de redevance par pallier
 init:
   values:
