Correction of dayly comput' & minimal value

--- a/openfisca_pf/parameters/daf/redevance_domaniale/type_calcul.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/type_calcul.yaml
@@ -25,6 +25,9 @@ vente_de_produits_locaux_zone_aeroportuaire:
 vente_etale:
   values:
     2018-01-01: 2
+activite_lucrative_manif_sport:
+  values:
+    2018-01-01: 2
 test_fonction_palier:
   values:
     2018-01-01: 3
