Modification of terms to use mulitple type variable for computation

--- a/openfisca_pf/parameters/daf/redevance_domaniale/type_1/installation_technique.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/type_1/installation_technique.yaml
@@ -5,7 +5,7 @@ part_fixe:
 part_unitaire:
   values:
     2018-01-01: 0
-part_surfacique:
+part_variable:
   values:
     2018-01-01: 0
 montant_minimum:
