--- a/openfisca_pf/parameters/daf/redevance_domaniale/type_1/bati_cas_general.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/type_1/bati_cas_general.yaml
@@ -1,8 +1,3 @@
-#La formule de calculs de type 1 est une fonction du type montant = part_fixe + part_unitaire* nombre_unité + part_surfacique* surface en m²
-#Il peut exister un montant minimum à payer
-#Pour le moment certains tarifs sont évoqués à la semaine, à la journée ou à d'autre unité de temps, d'où l'idée du prorata
-
-
 description: Paramètres pour le calcul du batî
 part_fixe:
   values:
@@ -10,7 +5,7 @@ part_fixe:
 part_unitaire:
   values:
     2018-01-01: 40000
-part_surfacique:
+part_variable:
   values:
     2018-01-01: 45
 montant_minimum:
