--- a/openfisca_pf/parameters/daf/redevance_domaniale/type_1/emprise_activite_lucrative.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/type_1/emprise_activite_lucrative.yaml
@@ -5,7 +5,7 @@ part_fixe:
 part_unitaire:
   values:
     2018-01-01: 0
-part_surfacique:
+part_variable:
   values:
     2018-01-01: 100
 montant_minimum:
