--- a/openfisca_pf/parameters/daf/redevance_domaniale/type_1/equipement_du_pays.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/type_1/equipement_du_pays.yaml
@@ -5,7 +5,7 @@ part_fixe:
 part_unitaire:
   values:
     2018-01-01: 40000
-part_surfacique:
+part_variable:
   values:
     2018-01-01: 45
 montant_minimum:
