--- a/openfisca_pf/parameters/daf/redevance_domaniale/type_2/extraction_essai.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/type_2/extraction_essai.yaml
@@ -1,40 +1,40 @@
-description: Paramètre de la redevance pour les ventes à l'étale
+description: Paramètre de la redevance pour d'extractions sur le domaine public fluvial par une entité hors entité publique
 zone_1:
   part_fixe:
     values:
-      2018-01-01: 15000
+      2018-01-01: 0
   part_unitaire:
     values:
       2018-01-01: 0
   part_variable:
     values:
-      2018-01-01: 0
+      2018-01-01: 500
   montant_minimum:
     values:
       2018-01-01: 0
   facteur_prorata:
     values:
-      2018-01-01: 30
+      2018-01-01: 360
 zone_2:
   part_fixe:
     values:
-      2018-01-01: 10000
+      2018-01-01: 0
   part_unitaire:
     values:
       2018-01-01: 0
   part_variable:
     values:
-      2018-01-01: 0
+      2018-01-01: 200
   montant_minimum:
     values:
       2018-01-01: 0
   facteur_prorata:
     values:
-      2018-01-01: 30
-zone_3:
+      2018-01-01: 360
+zone_3: ##Not defined for extraction
   part_fixe:
     values:
-      2018-01-01: 7500
+      2018-01-01: 0
   part_unitaire:
     values:
       2018-01-01: 0
@@ -46,11 +46,11 @@ zone_3:
       2018-01-01: 0
   facteur_prorata:
     values:
-      2018-01-01: 30
-zone_4:
+      2018-01-01: 0
+zone_4: ##Not defined for extraction
   part_fixe:
     values:
-      2018-01-01: 5000
+      2018-01-01: 0
   part_unitaire:
     values:
       2018-01-01: 0
@@ -62,4 +62,4 @@ zone_4:
       2018-01-01: 0
   facteur_prorata:
     values:
-      2018-01-01: 30
+      2018-01-01: 0
