--- a/openfisca_pf/parameters/daf/redevance_domaniale/type_3/test_fonction_palier.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/type_3/test_fonction_palier.yaml
@@ -5,7 +5,7 @@
 
 ## If only two scales is needed, put the value for rate_3 than for rate_2
 
-description: Paramètres pour le calcul de redevance par pallier
+description: Paramètres pour le calcul de redevance par palier
 init:
   values:
     2018-01-01: 30000
