Refactor du calcul type_1

--- a/openfisca_pf/parameters/daf/redevance_domaniale/type_5/test_fonction_palier_surface.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/type_5/test_fonction_palier_surface.yaml
@@ -25,6 +25,6 @@ rate_2:
 montant_minimum:
   values:
     2018-01-01: 0
-unite_insecable:
+base_calcul_jour:
   values:
-    2018-01-01: 365
+    2018-01-01: 360
