--- a/openfisca_pf/parameters/daf/redevance_domaniale/type_1/emprise_activite_lucrative.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/type_1/emprise_activite_lucrative.yaml
@@ -11,6 +11,6 @@ part_variable:
 montant_minimum:
   values:
     2018-01-01: 120000
-unite_insecable:
+base_calcul_jour:
   values:
-    2018-01-01: 365
+    2018-01-01: 360
