--- a/openfisca_pf/parameters/daf/redevance_domaniale/type_1/equipement_du_pays.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/type_1/equipement_du_pays.yaml
@@ -11,7 +11,7 @@ part_variable:
 montant_minimum:
   values:
     2018-01-01: 0
-unite_insecable:
+base_calcul_jour:
   values:
-    2018-01-01: 365
+    2018-01-01: 360
     
