--- a/openfisca_pf/parameters/daf/redevance_domaniale/type_2/vente_etale.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/type_2/vente_etale.yaml
@@ -12,7 +12,7 @@ zone_1:
   montant_minimum:
     values:
       2018-01-01: 0
-  unite_insecable:
+  base_calcul_jour:
     values:
       2018-01-01: 30
 zone_2:
@@ -28,7 +28,7 @@ zone_2:
   montant_minimum:
     values:
       2018-01-01: 0
-  unite_insecable:
+  base_calcul_jour:
     values:
       2018-01-01: 30
 zone_3:
@@ -44,7 +44,7 @@ zone_3:
   montant_minimum:
     values:
       2018-01-01: 0
-  unite_insecable:
+  base_calcul_jour:
     values:
       2018-01-01: 30
 zone_4:
@@ -60,6 +60,6 @@ zone_4:
   montant_minimum:
     values:
       2018-01-01: 0
-  unite_insecable:
+  base_calcul_jour:
     values:
       2018-01-01: 30
