--- a/openfisca_pf/parameters/daf/redevance_domaniale/type_1/em_eco_06_emprise_maritime_lucratif.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/type_1/em_eco_06_emprise_maritime_lucratif.yaml
@@ -1,17 +1,17 @@
-description: Paramètre pour les tests des premières versions
+
+description: Paramètres pour le calcul des Emprise dédiée à une activité lucrative
 part_fixe:
   values:
     2018-01-01: 0
 part_unitaire:
   values:
-    2018-01-01: 40000
+    2018-01-01: 0
 part_variable:
   values:
-    2018-01-01: 45
+    2018-01-01: 100
 montant_minimum:
   values:
-    2018-01-01: 0
+    2018-01-01: 120000
 base_calcul_jour:
   values:
     2018-01-01: 360
-    
