--- a/openfisca_pf/parameters/daf/redevance_domaniale/type_1/im_eco_08_autres_lucrative.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/type_1/im_eco_08_autres_lucrative.yaml
@@ -1,17 +1,16 @@
-description: Paramètre pour les tests des premières versions
+description: Paramètres pour le calcul des Autres activités lucratives  (zone aéroportuaire)
 part_fixe:
   values:
     2018-01-01: 0
 part_unitaire:
   values:
-    2018-01-01: 40000
+    2018-01-01: 0
 part_variable:
   values:
-    2018-01-01: 45
+    2018-01-01: 25
 montant_minimum:
   values:
-    2018-01-01: 0
+    2018-01-01: 12000
 base_calcul_jour:
   values:
     2018-01-01: 360
-    
