--- a/openfisca_pf/parameters/daf/redevance_domaniale/type_7/ex_eco_03_dpm_hors_entite_publique.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/type_7/ex_eco_03_dpm_hors_entite_publique.yaml
@@ -1,4 +1,4 @@
-description: Paramètre de la redevance pour d'extractions sur le domaine public fluvial par une entité hors entité publique
+description: Domaine public maritime Hors entité publique
 zone_1:
   part_fixe:
     values:
@@ -8,13 +8,13 @@ zone_1:
       2018-01-01: 0
   part_variable:
     values:
-      2018-01-01: 500
+      2018-01-01: 400
   montant_minimum:
     values:
       2018-01-01: 0
   base_calcul_jour:
     values:
-      2018-01-01: 360
+      2018-01-01: 1
 zone_2:
   part_fixe:
     values:
@@ -30,8 +30,8 @@ zone_2:
       2018-01-01: 0
   base_calcul_jour:
     values:
-      2018-01-01: 360
-zone_3: ##Not defined for extraction
+      2018-01-01: 1
+zone_3:
   part_fixe:
     values:
       2018-01-01: 0
@@ -40,14 +40,14 @@ zone_3: ##Not defined for extraction
       2018-01-01: 0
   part_variable:
     values:
-      2018-01-01: 0
+      2018-01-01: 200
   montant_minimum:
     values:
       2018-01-01: 0
   base_calcul_jour:
     values:
-      2018-01-01: 360
-zone_4: ##Not defined for extraction
+      2018-01-01: 1
+zone_4:
   part_fixe:
     values:
       2018-01-01: 0
@@ -56,10 +56,10 @@ zone_4: ##Not defined for extraction
       2018-01-01: 0
   part_variable:
     values:
-      2018-01-01: 0
+      2018-01-01: 200
   montant_minimum:
     values:
       2018-01-01: 0
   base_calcul_jour:
     values:
-      2018-01-01: 360
+      2018-01-01: 1
