--- a/openfisca_pf/parameters/daf/redevance_domaniale/type_4/test_fonction_palier_zone.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/type_4/test_fonction_palier_zone.yaml
@@ -1,10 +1,10 @@
-## Type_4 use the same computation as type_3 but each thresholds and rates depends on the zone
-## Type_3 computation computes the total amount depending on duration threshold and dayly rate that evolve.
-## For redevance domaniale, 4 scales have been configured but for the moment only 3 are used.
-## | duree < threshold_1 | duree < threshold_2                             | duree > threshold_2
-## | montant = init      | montant = init + rate_1 * (duree - threshold_1) |  montant = init + rate_1 * (threshold2 - threshold_1) + rate_2 * (duree - threshold_2)
+#  Type_4 use the same computation as type_3 but each thresholds and rates depends on the zone
+#  Type_3 computation computes the total amount depending on duration threshold and dayly rate that evolve.
+#  For redevance domaniale, 4 scales have been configured but for the moment only 3 are used.
+#  | duree < threshold_1 | duree < threshold_2                             | duree > threshold_2
+#  | montant = init      | montant = init + rate_1 * (duree - threshold_1) |  montant = init + rate_1 * (threshold2 - threshold_1) + rate_2 * (duree - threshold_2)
 
-## If only two scales is needed, put the value for rate_3 than for rate_2
+#  If only two scales is needed, put the value for rate_3 than for rate_2
 
 
 description: Paramètre du calcul de la redevance par pallier par zone pour les foires de produits locaux
