--- a/openfisca_pf/parameters/daf/redevance_domaniale/type_5/test_fonction_palier_surface.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/type_5/test_fonction_palier_surface.yaml
@@ -1,7 +1,7 @@
-## Type_3 computation computes the total amount depending on duration threshold and dayly rate that evolve.
-## For redevance domaniale, 4 scales have been configured but for the moment only 3 are used.
-## | surface < threshold_1              | surface < threshold_2                                                    | surface > threshold_2
-## | montant = init + rate_0 * surface  | montant = init + rate_0 * threshold_1 + rate_1 * (surface - threshold_1) | montant = init + rate_0 * threshold_1 + rate_1 * (threshold2 - threshold_1) + rate_2 * (duree - threshold_2)
+#  Type_3 computation computes the total amount depending on duration threshold and dayly rate that evolve.
+#  For redevance domaniale, 4 scales have been configured but for the moment only 3 are used.
+#  | surface < threshold_1              | surface < threshold_2                                                    | surface > threshold_2
+#  | montant = init + rate_0 * surface  | montant = init + rate_0 * threshold_1 + rate_1 * (surface - threshold_1) | montant = init + rate_0 * threshold_1 + rate_1 * (threshold2 - threshold_1) + rate_2 * (duree - threshold_2)
 
 description: Paramètres pour le calcul de redevance par palier
 init:
