--- a/openfisca_pf/parameters/daf/redevance_domaniale/type_7/ex_eco_04_dpm_pour_entite_publique.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/type_7/ex_eco_04_dpm_pour_entite_publique.yaml
@@ -51,3 +51,16 @@ zone_4:
   montant_minimum:
     values:
       2018-01-01: 0
+zone_5:
+  part_fixe:
+    values:
+      2018-01-01: 0
+  part_unitaire:
+    values:
+      2018-01-01: 0
+  part_variable:
+    values:
+      2018-01-01: 100
+  montant_minimum:
+    values:
+      2018-01-01: 0
