--- a/openfisca_pf/parameters/daf/redevance_domaniale/Type_8/test_zone_archi.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/Type_8/test_zone_archi.yaml
@@ -1,4 +1,4 @@
-description: Paramètre de la redevance pour les ventes à l'étale
+description: Agriculture de type maraîchère, vivière, fruitière
 zone_1:
   part_fixe:
     values:
@@ -14,7 +14,7 @@ zone_1:
       2018-01-01: 0
   base_calcul_jour:
     values:
-      2018-01-01: 30
+      2018-01-01: 360
 zone_2:
   part_fixe:
     values:
@@ -30,7 +30,7 @@ zone_2:
       2018-01-01: 0
   base_calcul_jour:
     values:
-      2018-01-01: 30
+      2018-01-01: 360
 zone_3:
   part_fixe:
     values:
@@ -46,7 +46,7 @@ zone_3:
       2018-01-01: 0
   base_calcul_jour:
     values:
-      2018-01-01: 30
+      2018-01-01: 360
 zone_4:
   part_fixe:
     values:
@@ -62,4 +62,20 @@ zone_4:
       2018-01-01: 0
   base_calcul_jour:
     values:
-      2018-01-01: 30
+      2018-01-01: 360
+zone_5:
+  part_fixe:
+    values:
+      2018-01-01: 999999999
+  part_unitaire:
+    values:
+      2018-01-01: 0
+  part_variable:
+    values:
+      2018-01-01: 0
+  montant_minimum:
+    values:
+      2018-01-01: 0
+  base_calcul_jour:
+    values:
+      2018-01-01: 360
