--- a/openfisca_pf/parameters/daf/redevance_domaniale/type_8/ag_priv_02_elevage.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/type_8/ag_priv_02_elevage.yaml
@@ -1,65 +1,81 @@
-description: Paramètre de la redevance pour les ventes à l'étale
+description: Elevage
 zone_1:
   part_fixe:
     values:
-      2018-01-01: 999999999
+      2018-01-01: 0
   part_unitaire:
     values:
       2018-01-01: 0
   part_variable:
     values:
-      2018-01-01: 0
+      2018-01-01: 30000
   montant_minimum:
     values:
-      2018-01-01: 0
+      2018-01-01: 10000
   base_calcul_jour:
     values:
-      2018-01-01: 30
+      2018-01-01: 360
 zone_2:
   part_fixe:
     values:
-      2018-01-01: 999999999
+      2018-01-01: 0
   part_unitaire:
     values:
       2018-01-01: 0
   part_variable:
     values:
-      2018-01-01: 0
+      2018-01-01: 15000
   montant_minimum:
     values:
-      2018-01-01: 0
+      2018-01-01: 10000
   base_calcul_jour:
     values:
-      2018-01-01: 30
+      2018-01-01: 360
 zone_3:
   part_fixe:
     values:
-      2018-01-01: 999999999
+      2018-01-01: 0
   part_unitaire:
     values:
       2018-01-01: 0
   part_variable:
     values:
-      2018-01-01: 0
+      2018-01-01: 5000
   montant_minimum:
     values:
-      2018-01-01: 0
+      2018-01-01: 10000
   base_calcul_jour:
     values:
-      2018-01-01: 30
+      2018-01-01: 360
 zone_4:
   part_fixe:
     values:
-      2018-01-01: 999999999
+      2018-01-01: 0
   part_unitaire:
     values:
       2018-01-01: 0
   part_variable:
     values:
-      2018-01-01: 0
+      2018-01-01: 10000
   montant_minimum:
     values:
-      2018-01-01: 0
+      2018-01-01: 10000
   base_calcul_jour:
     values:
-      2018-01-01: 30
+      2018-01-01: 360
+zone_5:
+  part_fixe:
+    values:
+      2018-01-01: 0
+  part_unitaire:
+    values:
+      2018-01-01: 0
+  part_variable:
+    values:
+      2018-01-01: 5000
+  montant_minimum:
+    values:
+      2018-01-01: 10000
+  base_calcul_jour:
+    values:
+      2018-01-01: 360
