--- a/openfisca_pf/parameters/daf/redevance_domaniale/type_9/priv_02_eco_industriel.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/type_9/priv_02_eco_industriel.yaml
@@ -1,4 +1,4 @@
-description: Paramètres pour locations sur le domaine privé pour les activités touristiques
+description: Paramètres pour les locations sur le domaine privé pour des opérations économiques ou industrielles
 part_variable:
   values:
     2018-01-01: 3
