--- a/openfisca_pf/parameters/daf/redevance_domaniale/type_9/priv_04_etablissement_public.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/type_9/priv_04_etablissement_public.yaml
@@ -1,4 +1,4 @@
-description: Paramètres pour locations sur le domaine privé pour les activités touristiques
+description: Paramètres pour les locations au profit des établissements publics pour les besoins de leur fonctionnement
 part_variable:
   values:
     2018-01-01: 3
