--- a/openfisca_pf/parameters/daf/redevance_domaniale/type_9/priv_03_projet_social.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/type_9/priv_03_projet_social.yaml
@@ -1,4 +1,4 @@
-description: Paramètres pour locations sur le domaine privé pour les activités touristiques
+description: Paramètres pour les locations sur le domaine privé pour des projets à caractère social, éducatif ou sportif
 part_variable:
   values:
     2018-01-01: 3
