--- a/openfisca_pf/parameters/daf/redevance_domaniale/type_9/priv_05_habitat_social.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/type_9/priv_05_habitat_social.yaml
@@ -1,7 +1,7 @@
-description: Paramètres pour locations sur le domaine privé pour les activités touristiques
+description: Paramètres pour les locations au profit d'habitats sociaux'
 part_variable:
   values:
-    2018-01-01: 3
+    2018-01-01: 1
 montant_minimum:
   values:
     2018-01-01: 0
