--- a/openfisca_pf/parameters/daf/redevance_domaniale/type_23/ip_pr_02_terrain_sport_ac_elec.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/type_23/ip_pr_02_terrain_sport_ac_elec.yaml
@@ -2,21 +2,21 @@
 #  the tarifcation values are:
 #     1 hour = 5000F
 #     1 half day = 15000F
-#     1 full day = 30 000
+#     1 full day = 30000F
 #  When hour_rate*time is higher than half day value, the autorisation is made for half a day.
 #  A half-day is 8 hours but can be parametered (from 6am to 2pm; and from 2pm to 10pm).
 #  There is no subdivision between half-day and a day. If you want 
 
-description: Paramètres pour le calcul de redevance par pallier pour des durées inférieure à 1 jour
+description: Paramètres pour le calcul journalier pour terrain de sport avec electricite
 tarif_horaire:
   values:
-    2018-01-01: 5000
+    2018-01-01: 3500
 duree_demi_jour:
   values:
     2018-01-01: 8
 tarif_demi_jour:
   values:
-    2018-01-01: 15000
+    2018-01-01: 10000
 tarif_jour:
   values:
-    2018-01-01: 30000
+    2018-01-01: 20000
